fix: :bug: adjust main content section top margin so that it isn't hidden by navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,9 +68,15 @@ nav {
 
 /* ---------------------------------------- Main content */
 
+section {
+    /* requires 60px in order to appear from under navbar */
+    margin-top: 60px;
+}
+
 #purpose {
     width: 90%;
-    margin: 20px auto;
+    margin: 60px auto;
+
 }
 
 #purpose h2 {
